@startuml
'https://plantuml.com/class-diagram

class ChangePostSharedBoardUI{
}

class SharedBoardController{
+addSharedBoard()
+saveSharedBoard()
+getAll()
}

class SharedBoardService{
+getAllSharedBoard()
}


class PersistenceContext{
+repositories()
}

class RepositoryFactory{
+create()
+newTransactionalContext()
+create(TransactionalContext ctx)
}

database SharedBoardRepository{
}

class TransactionalContext{
+beginTransaction()
+commit()
}

class SharedBoard{
}


ChangePostSharedBoardUI --> SharedBoardController
SharedBoardController-->PersistenceContext
SharedBoardController-->TransactionalContext

SharedBoardService --> SharedBoardRepository
SharedBoardController --> SharedBoard

PersistenceContext-->RepositoryFactory

RepositoryFactory-->SharedBoardService
@enduml